--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "homepage": "http://angularjs.org/",
   "repository": {
     "type": "git",
-    "url": "git://github.com/angular/foodme.git"
+    "url": "git@github.com:fabrikatyr/foodme.git"
+    
   },
   "author": "AngularJS Team",
   "contributors": [
